# starting-ragchatbot-codebase

./: .env.example  .gitignore  CLAUDE.md  main.py  pyproject.toml  run.sh
.claude/: settings.local.json
backend/: ai_generator.py  app.py  config.py  document_processor.py  mock_app.py  models.py  rag_system.py  search_tools.py  session_manager.py  vector_store.py
backend/tests/: __init__.py  conftest.py  run_tests.py  test_ai_generator.py  test_ai_generator_sequential.py  test_api_endpoints.py  test_course_search_tool.py  test_integration_sequential.py  test_rag_system.py
frontend/: index.html  script.js  style.css
